# ide_previewer

./: .gitignore  BUILD.gn  PreviewerCLI.cpp  README.md  RichPreviewer.cpp  ThinPreviewer.cpp  bundle.json
automock/: BUILD.gn  build_jsmock_system_plugin.js  js_framework_build.sh  tsconfig.json
automock/mock-generate/: .babelrc  .prettierrc  jest.config.js  package.json  tsconfig.json
automock/mock-generate/src/: main.ts
automock/mock-generate/src/common/: commonUtils.ts  constants.ts  kitUtils.ts  systemUtils.ts  tsNodeUtils.ts
automock/mock-generate/src/declaration-node/: callSignatureDeclaration.ts  classDeclaration.ts  constructorDeclaration.ts  enumDeclaration.ts  functionDeclaration.ts  heritageClauseDeclaration.ts  importAndExportDeclaration.ts  indexSignatureDeclaration.ts  interfaceDeclaration.ts  methodDeclaration.ts  methodSignatureDeclaration.ts  moduleDeclaration.ts  propertyDeclaration.ts  propertySignatureDeclaration.ts  sourceFileElementsAssemply.ts  typeAliasDeclaration.ts  typeParameterDeclaration.ts  variableStatementResolve.ts
automock/mock-generate/src/generate/: generateClassDeclaration.ts  generateCommonFunction.ts  generateCommonMethod.ts  generateCommonMethodSignature.ts  generateContent.ts  (+15 more)
cli/: BUILD.gn  CommandLine.cpp  CommandLine.h  CommandLineFactory.cpp  CommandLineFactory.h  CommandLineInterface.cpp  CommandLineInterface.h
config/: config.json
gn/: config.gni
jsapp/: BUILD.gn  JsApp.cpp  JsApp.h
jsapp/lite/: JsAppImpl.cpp  JsAppImpl.h  TimerTaskHandler.cpp
jsapp/rich/: JsAppImpl.cpp  JsAppImpl.h
mock/: BUILD.gn  KeyInput.cpp  SystemCapability.cpp  VideoRecorder.cpp  VideoRecorder.h  VirtualScreen.cpp  VirtualScreen.h
mock/lite/: BatteryModuleImpl.cpp  GeoLocation.cpp  HalSysParam.cpp  KeyInputImpl.cpp  KeyInputImpl.h  LanguageManagerImpl.cpp  MouseInputImpl.cpp  MouseInputImpl.h  MouseWheelImpl.h  NativeTimer.cpp  VirtualLocation.cpp  VirtualMessageImpl.cpp  VirtualMessageImpl.h  VirtualScreenImpl.cpp  VirtualScreenImpl.h
mock/rich/: KeyInputImpl.cpp  MouseInputImpl.cpp  MouseInputImpl.h  VirtualMessageImpl.cpp  VirtualMessageImpl.h  VirtualScreenImpl.cpp  VirtualScreenImpl.h
test/: test.gni
test/fuzztest/: BUILD.gn  ChangeJsonUtil.cpp  ChangeJsonUtil.h  common.h  main.cpp  target.txt
test/fuzztest/commandparse_fuzzer/: BUILD.gn  CommandParse.cpp  CommandParse.h  CommonCommandParseFuzzer.cpp  LiteCommandParseFuzzer.cpp  RichCommandParseFuzzer.cpp
test/fuzztest/jsonparse_fuzzer/: BUILD.gn  DeviceConfigParseFuzzer.cpp  GetHspAceModuleBuildFuzzer.cpp  GetModuleBufferFromHspFuzzer.cpp  GetModulePathMapFuzzer.cpp  ParseMockJsonFileFuzzer.cpp  PkgContextInfoParseFuzzer.cpp  ReadFileContentsFuzzer.cpp  SetPkgContextInfoFuzzer.cpp  StageContextInfoParseFuzzer.cpp
test/fuzztest/paramsparse_fuzzer/: BUILD.gn  ParamsParseFuzzer.cpp  ParamsParseFuzzer.h
test/mock/: MockFile.cpp  MockFile.h  MockGlobalResult.cpp  MockGlobalResult.h
test/mock/ability/: MockSimulator.cpp
test/mock/arkui/: MockAceAbility.cpp  MockAcePreviewHelper.cpp
test/mock/graphic/: MockGlfwRenderContext.cpp
test/mock/jsapp/: MockJsApp.cpp  MockJsAppImpl.cpp
test/mock/mock/: MockEventAdapter.cpp  MockKeyInputImpl.cpp  MockMouseInputImpl.cpp  MockMouseWheelImpl.cpp  MockVirtualMessageImpl.cpp  MockVirtualScreen.cpp  MockVirtualScreenImpl.cpp
test/mock/util/: MockClipboardHelper.cpp  MockKeyboardHelper.cpp  MockLocalSocket.cpp  MockWebSocketServer.cpp
test/mock/window/: MockWindow.cpp  MockWindowDisplay.cpp  MockWindowModel.cpp  window.h
test/mock_lite/ace_engine_lite/: MockDebugger.cpp  MockJsAbility.cpp  MockProductAdapter.cpp
test/mock_lite/resource_management_lite/: MockGlobal.cpp
test/mock_lite/ui_lite/: MockBaseGfxEngine.cpp  MockDrawUtils.cpp  MockGraphicStartUp.cpp  MockImageDecodeAbility.cpp  MockInputDeviceManager.cpp  MockPointerInputDevice.cpp  MockRotateInputDevice.cpp  MockSoftEngine.cpp  MockTask.cpp  MockTaskManager.cpp  MockUIFont.cpp  MockUIFontBuilder.cpp  MockUIFontVector.cpp  MockUiLineBreak.cpp
test/unittest/: BUILD.gn
test/unittest/cli/: BUILD.gn  CommandLineFactoryTest.cpp  CommandLineInterfaceTest.cpp  CommandLineTest.cpp
test/unittest/jsapp/: BUILD.gn  EventHandlerTest.cpp  JsAppImplTest.cpp  StageContextTest.cpp
test/unittest/jsapp_lite/: BUILD.gn  JsAppImplTest.cpp  TimerTaskHandlerTest.cpp
test/unittest/mock/: BUILD.gn  KeyInputImplTest.cpp  LanguageManagerImplTest.cpp  MouseInputImplTest.cpp  MouseWheelImplTest.cpp  VirtualScreenImplTest.cpp
test/unittest/mock_lite/: AblityKitTest.cpp  AsyncWorkManagerTest.cpp  BUILD.gn  BatteryModuleImplTest.cpp  BrightnessModuleImplTest.cpp  GeoLocationTest.cpp  HalSysParamTest.cpp  JsAsyncWorkTest.cpp  KeyInputImplTest.cpp  LanguageManagerImplTest.cpp  MouseInputImplTest.cpp  MouseWheelImplTest.cpp  NativeTimerTest.cpp  SensorModuleImplTest.cpp  VibratorModuleImplTest.cpp  VirtualLocationTest.cpp  VirtualMessageImplTest.cpp  VirtualScreenImplTest.cpp
test/unittest/util/: BUILD.gn  CallbackQueueTest.cpp  ClipboardHelperTest.cpp  CommandParserTest.cpp  CppTimerManagerTest.cpp  CppTimerTest.cpp  CrashHandlerTest.cpp  EndianUtilTest.cpp  JsonReaderTest.cpp  LocalDateTest.cpp  ModelManagerTest.cpp  NativeFileSystemTest.cpp  PublicMethodsTest.cpp  SharedDataTest.cpp  TimeToolTest.cpp  TraceToolTest.cpp
util/: BUILD.gn  CallbackQueue.cpp  CommandParser.cpp  CommandParser.h  CppTimer.cpp  CppTimerManager.cpp  EndianUtil.h  FileSystem.cpp  FileSystem.h  JsonReader.cpp  JsonReader.h  KeyboardHelper.h  LocalSocket.h  ModelManager.cpp  NativeFileSystem.h  PreviewerEngineLog.cpp  PublicMethods.cpp  SharedData.h  TimeTool.cpp  TraceTool.cpp  TraceTool.h  Unhap.cpp  Unhap.h  WebSocketServer.cpp  WebSocketServer.h
util/linux/: ClipboardHelper.cpp  ClipboardX11.cpp  KeyboardHelper.cpp
util/unix/: ClipboardHelper.cpp  ClipboardObjc.mm  CrashHandler.cpp  KeyboardHelper.cpp  KeyboardObjc.h  KeyboardObjc.mm  LocalSocket.cpp  NativeFileSystem.cpp
util/windows/: ClipboardHelper.cpp  CrashHandler.cpp  KeyboardHelper.cpp  LocalSocket.cpp  NativeFileSystem.cpp  StringHelper.cpp
(+22 files in other folders)
