# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../test.gni")

module_output_path = "previewer/jsapp_lite"

group("jsapp_lite_unittest") {
  testonly = true
  deps = [ ":jsapp_lite_test" ]
}

ide_unittest("jsapp_lite_test") {
  testonly = true
  part_name = "previewer"
  subsystem_name = "ide"
  module_out_path = module_output_path
  output_name = "jsapp_lite"
  sources = [
    "$ide_previewer_path/cli/CommandLine.cpp",
    "$ide_previewer_path/cli/CommandLineFactory.cpp",
    "$ide_previewer_path/cli/CommandLineInterface.cpp",
    "$ide_previewer_path/jsapp/JsApp.cpp",
    "$ide_previewer_path/jsapp/lite/JsAppImpl.cpp",
    "$ide_previewer_path/jsapp/lite/TimerTaskHandler.cpp",
    "$ide_previewer_path/mock/KeyInput.cpp",
    "$ide_previewer_path/mock/LanguageManager.cpp",
    "$ide_previewer_path/mock/MouseInput.cpp",
    "$ide_previewer_path/mock/MouseWheel.cpp",
    "$ide_previewer_path/mock/VirtualMessage.cpp",
    "$ide_previewer_path/mock/VirtualScreen.cpp",
    "$ide_previewer_path/mock/lite/AsyncWorkManager.cpp",
    "$ide_previewer_path/mock/lite/KeyInputImpl.cpp",
    "$ide_previewer_path/mock/lite/LanguageManagerImpl.cpp",
    "$ide_previewer_path/mock/lite/MouseInputImpl.cpp",
    "$ide_previewer_path/mock/lite/MouseWheelImpl.cpp",
    "$ide_previewer_path/mock/lite/VirtualMessageImpl.cpp",
    "$ide_previewer_path/mock/lite/VirtualScreenImpl.cpp",
    "$ide_previewer_path/test/mock/MockGlobalResult.cpp",
    "$ide_previewer_path/test/mock/util/MockLocalSocket.cpp",
    "$ide_previewer_path/test/mock/util/MockWebSocketServer.cpp",
    "$ide_previewer_path/test/mock_lite/ace_engine_lite/MockDebugger.cpp",
    "$ide_previewer_path/test/mock_lite/ace_engine_lite/MockJsAbility.cpp",
    "$ide_previewer_path/test/mock_lite/ace_engine_lite/MockProductAdapter.cpp",
    "$ide_previewer_path/test/mock_lite/resource_management_lite/MockGlobal.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockBaseGfxEngine.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockDrawUtils.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockGraphicStartUp.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockImageDecodeAbility.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockInputDeviceManager.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockPointerInputDevice.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockRotateInputDevice.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockSoftEngine.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockTask.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockTaskManager.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockUIFont.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockUIFontBuilder.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockUIFontVector.cpp",
    "$ide_previewer_path/test/mock_lite/ui_lite/MockUiLineBreak.cpp",
    "$ide_previewer_path/util/CallbackQueue.cpp",
    "$ide_previewer_path/util/CommandParser.cpp",
    "$ide_previewer_path/util/CppTimer.cpp",
    "$ide_previewer_path/util/CppTimerManager.cpp",
    "$ide_previewer_path/util/EndianUtil.cpp",
    "$ide_previewer_path/util/FileSystem.cpp",
    "$ide_previewer_path/util/Interrupter.cpp",
    "$ide_previewer_path/util/JsonReader.cpp",
    "$ide_previewer_path/util/PreviewerEngineLog.cpp",
    "$ide_previewer_path/util/SharedDataManager.cpp",
    "$ide_previewer_path/util/TimeTool.cpp",
    "$ide_previewer_path/util/TraceTool.cpp",
    "$ide_previewer_path/util/unix/LocalDate.cpp",
    "$ide_previewer_path/util/unix/NativeFileSystem.cpp",
    "JsAppImplTest.cpp",
    "TimerTaskHandlerTest.cpp",
  ]
  include_dirs = [
    ".",
    "$ide_previewer_path/mock",
    "$ide_previewer_path/mock/lite",
    "$ide_previewer_path/util",
    "$ide_previewer_path/jsapp",
    "$ide_previewer_path/jsapp/lite",
    "$ide_previewer_path/cli",
    "$ide_previewer_path/test/mock",
    "$ace_engine_lite_path/frameworks/include/context",
    "$ace_engine_lite_path/frameworks/include/base",
    "$ace_engine_lite_path/interfaces/inner_api/builtin/base",
    "$ace_engine_lite_path/interfaces/inner_api/builtin/async",
    "$ace_engine_lite_path/interfaces/inner_api/builtin/jsi",
    "$ace_engine_lite_path/frameworks/targets/simulator",
    "$ui_lite_path/interfaces/kits/font",
    "$ui_lite_path/interfaces/innerkits/font",
    "$ui_lite_path/frameworks/font",
    "$ui_lite_path/interfaces/innerkits/common",
    "$ui_lite_path/interfaces/kits",
    "$ui_lite_path/interfaces/innerkits",
    "$ui_lite_path/frameworks",
    "$ui_lite_path/frameworks/dock",
    "$ui_lite_path/interfaces/innerkits/dock",
    "$ui_lite_path/interfaces/innerkits/common",
    "$ui_lite_path/interfaces/innerkits/engines/gfx",
    "$ui_lite_path/frameworks/draw",
    "$ui_lite_path/interfaces/kits/common",
    "$graphic_utils_lite_path/interfaces/innerkits",
    "$graphic_utils_lite_path/interfaces/kits",
    "$ability_lite_path/frameworks/abilitymgr_lite/include",
    "$resource_management_lite_path/interfaces/inner_api/include",
    "//third_party/libwebsockets/include",
    "//third_party/freetype/include",
  ]
  deps = [
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/cJSON:cjson_static",
    "//third_party/libjpeg-turbo:turbojpeg_static",
  ]
  libs = []
  cflags = [
    "-Wno-error=overflow",
    "-fno-exceptions",
  ]
  cflags_cc = [
    "-Wno-error=overflow",
    "-fno-exceptions",
  ]
  ldflags = [ "-Wno-error=overflow" ]
}
